config/samples/environments_v1alpha1_deployment.yaml
apiVersion: environments.blanketops.dev/v1alpha1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: blanketops-environments
    app.kubernetes.io/part-of: blanketops
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: v0.0.1
    environments.blanketops.dev/name: environment-sample
    environments.blanketops.dev/type: dev
    environments.blanketops.dev/api-version: v0.2.7
    environments.blanketops.dev/contract-version: v0.5.1
    environments.blanketops.dev/controller-version: v0.4.1
    environments.blanketops.dev/operator-version: v0.7.6
  name: deployment-for-kaniko-sample
  namespace: dev
spec:
  contract:
    serviceUnits:
      - for-kaniko-app-api
      - for-kaniko-app-worker
    runtime: kubernetes.io/container-runtime #currently default and supported, in progress ecs,knative and azure
    imageAutomation: false
    reconciliationStrategy: kustomize # default, planning to support helm
    manifestsRepo:
      url: ssh://git@github.com/<repository-owner/<repository>.git
      cloneSecret: git-ssh-credentials # from secretStore
      strategy: kustomization # build repo structure with kustomize defaults, to support helm in future
      path: ./overlays/dev
