config/samples/networks_v1alpha1_route.yaml
apiVersion: networks.blanketops.dev/v1alpha1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: blanketops-environments
    app.kubernetes.io/part-of: blanketops
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: v0.0.1
    environments.blanketops.dev/name: environment-sample
    environments.blanketops.dev/type: dev
    environments.blanketops.dev/api-version: v0.2.9
    environments.blanketops.dev/contract-version: v0.5.4
    environments.blanketops.dev/controller-version: v0.6.1
    environments.blanketops.dev/operator-version: v0.8.2
  name: route-for-kaniko-sample
  namespace: dev
spec:
  contract:
    host: api.dev.blanketops.dev
    path: /
    enabled: true
    tlsEnabled: true
    runtime: kubernetes.io/container-runtime
